dynamically_typed_tests/invalid/variables/became_valid/basicTypeErr10.wacc
# type mismatch: string <- int

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  s = 128
end
